kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sunrise
spec:
  selector:
    app: sunrise
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
