kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sunrise-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 127.0.0.1
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sunrise
            port:
              number: 8000
